# langchain_academy_courses

./: .gitignore  ADDING_LANGCHAIN_COURSES.md  pyproject.toml
introduction_to_langgraph/module-0/: basics.ipynb
introduction_to_langgraph/module-1/: simple-graph.ipynb
