[project]
name = "langchain-academy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.70",
    "langchain-openai>=0.3.28",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.5.4",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "langgraph-cli[inmem]>=0.3.5",
    "langgraph-prebuilt>=0.5.2",
    "langgraph-sdk>=0.1.74",
    "langsmith>=0.4.8",
    "notebook>=7.4.4",
    "tavily-python>=0.7.10",
    "trustcall>=0.0.39",
    "wikipedia>=1.4.0",
]
